--- a/flutter_api/pubspec.yaml
+++ b/flutter_api/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   google_fonts: ^6.2.1
   flutter_spinkit: ^5.2.1
   http: ^1.2.2
+  carousel_slider: ^5.0.0
+  shared_preferences: ^2.3.2
 
 dev_dependencies:
   flutter_test:
